--- a/index_NVS.html
+++ b/index_NVS.html
@@ -31,7 +31,7 @@
 <script src="/js/swfobject.js" type="text/javascript"></script>		
 <script src="/js/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
 <script src="/js/jquery.bgiframe.js " type="text/javascript"></script>-->
-<script src="js/old/main.js" type="text/javascript"></script>		
+<!--<script src="js/old/main.js" type="text/javascript"></script>-->		
 <!--<script src="/js/custom.js" type="text/javascript"></script>
 <script type="text/javascript" language="JavaScript" src="/js/webtrends.js"></script>
 <script src="/js/bw.js" type="text/javascript"></script>-->
