--- a/index_NVS.html
+++ b/index_NVS.html
@@ -24,6 +24,8 @@
 <![endif]-->
 <!-- JavaScript -->
 <script src="js/new/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script src="js/jvectormap/jqueryLocationFinderPlugin.js"></script>
+<!--<script src="js/jvectormap/locationFinder.jvectormap.js"></script>-->
 <!--<script src="/js/jquery.tools.min.js" type="text/javascript"></script>
 <script src="/js/jquery.sizeswitch.js" type="text/javascript"></script>-->
 <script src="js/old/jquery.accordion.js" type="text/javascript"></script>
@@ -35,6 +37,11 @@
 <!--<script src="/js/custom.js" type="text/javascript"></script>
 <script type="text/javascript" language="JavaScript" src="/js/webtrends.js"></script>
 <script src="/js/bw.js" type="text/javascript"></script>-->
+<link rel="stylesheet" type="text/css" href="css/jvectormap/jquery-jvectormap-1.2.2.css">
+<script src="js/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+<script src="js/jvectormap/jquery-mousewheel.js"></script>
+<script src="js/jvectormap/worldNVS.js"></script>
+
 
 
 </head>
@@ -171,13 +178,13 @@
 }
 </style>
 </noscript>
--->
+
 <script type="text/javascript">
     jQuery(document).ready(function($){
         detectFlashShowLayer(8, $("#noflash_location_finder"), $("#location_finder_box")); // Flash Version, Container with no flash text, container with flashcontent
     });    
 </script>
-
+-->
 		</div>
 		
 		
