--- a/index_NVS.html
+++ b/index_NVS.html
@@ -23,12 +23,12 @@
 <link rel="stylesheet" href="/css/ie7.css" media="all" type="text/css" />
 <![endif]-->
 <!-- JavaScript -->
-<script src="js/new/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script src="js/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="js/jvectormap/jqueryLocationFinderPlugin.js"></script>
 <!--<script src="js/jvectormap/locationFinder.jvectormap.js"></script>-->
 <!--<script src="/js/jquery.tools.min.js" type="text/javascript"></script>
 <script src="/js/jquery.sizeswitch.js" type="text/javascript"></script>-->
-<script src="js/old/jquery.accordion.js" type="text/javascript"></script>
+<script src="js/jquery.accordion.js" type="text/javascript"></script>
 <!--<script src="/js/jcarousellite_1.0.1.min.js" type="text/javascript"></script>
 <script src="/js/swfobject.js" type="text/javascript"></script>		
 <script src="/js/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
@@ -68,13 +68,13 @@
                   
 			
 			<div id="location_finder_box" style="display:none">
-	<script src="js/new/prototype.js" language="JavaScript" type="text/javascript"></script>
-	<script src="js/old/loc_finder/swfobject.js" language="JavaScript" type="text/javascript"></script>
+	<script src="js/prototype.js" language="JavaScript" type="text/javascript"></script>
+	<script src="js/loc_finder/swfobject.js" language="JavaScript" type="text/javascript"></script>
 	<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyDUgmoq6CLnt_wqbVG5KJnhBoeMEyyDuo0" type="text/javascript"></script>
-	<script src="js/old/loc_finder/markermanager.js" language="JavaScript" type="text/javascript"></script>
-	<script src="js/old/loc_finder/countries.js" language="JavaScript" type="text/javascript"></script>
-	<script src="js/old/loc_finder/locations.js" language="JavaScript" type="text/javascript"></script>
-	<script src="js/old/loc_finder/application.js" language="JavaScript" type="text/javascript"></script>
+	<script src="js/loc_finder/markermanager.js" language="JavaScript" type="text/javascript"></script>
+	<script src="js/loc_finder/countries.js" language="JavaScript" type="text/javascript"></script>
+	<script src="js/loc_finder/locations.js" language="JavaScript" type="text/javascript"></script>
+	<script src="js/loc_finder/application.js" language="JavaScript" type="text/javascript"></script>
 	<div id="locFinder">
 		<hr class="divider"/><h2>Select a country</h2>
 		<!-- BEGIN country list -->
