--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <link rel="stylesheet" href="css/nav.css" media="all" type="text/css" />
 <link rel="stylesheet" href="css/jquery.fancybox-1.3.4.css" media="all" type="text/css" />
 <!--[if lt IE 7]>
-<link rel="stylesheet" href="/css/ie6.css" media="all" type="text/css" />		
+<link rel="stylesheet" href="css/ie6.css" media="all" type="text/css" />		
 <![endif]-->
 <!--[if IE 7]>
-<link rel="stylesheet" href="/css/ie7.css" media="all" type="text/css" />
+<link rel="stylesheet" href="css/ie7.css" media="all" type="text/css" />
 <![endif]-->
 <!-- JavaScript -->
 <script src="js/jquery-1.11.1.min.js" type="text/javascript"></script>
