hang in the Plugin
using hasOwnProperty instead of $.inArray

Signed-off-by: Marcello Angileri <marcelloangileri@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="date" content="07-01-2011"/>
 <meta http-equiv="content-language" content="en"/>
 
-<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
+<!--<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />-->
 <!-- CSS -->
 <link rel="stylesheet" href="css/main.css" media="all" type="text/css" />	
 <link rel="stylesheet" href="css/nav.css" media="all" type="text/css" />
